--- a/FantasticApp/Components/_Imports.razor
+++ b/FantasticApp/Components/_Imports.razor
@@ -6,8 +6,8 @@
 @using static Microsoft.AspNetCore.Components.Web.RenderMode
 @using Microsoft.AspNetCore.Components.Web.Virtualization
 @using Microsoft.JSInterop
-@using SamplePages
-@using SamplePages.Components
-@using SamplePages.GraphQL
-@using SamplePages.GraphQL.Components
+@using FantasticApp
+@using FantasticApp.Components
+@using FantasticApp.GraphQL
+@using FantasticApp.GraphQL.Components
 @using StrawberryShake
